[project]
name = "246-group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10,<4.0",
    "board>=1.0",
    "mock-gpio>=0.2.0",
    "rpi-gpio>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]
