[project]
name = "246-group-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-blinka>=9.0.4",
    "adafruit-circuitpython-neopixel>=6.4.1",
    "aiohttp>=3.10,<4.0",
    "board>=1.0",
    "display>=1.0.0",
    "mock-gpio>=0.2.0",
    "rgb>=0.0.3",
    "rpi-gpio>=0.7.1",
    "rpi-ws281x",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]
